2007-06-18 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed to allow blank parameters on macro invocation, substituting
  nothing (not even empty quotes) as in MPASM

2007-06-18 David Barnett <daviebdawg@gmail.com>
  * [gplink] Fixed bug #1472396, error on empty comment line in LKR script

2007-06-17 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Limited string->character coercion of 1-length string literals to
  contexts where syntax doesn't permit strings
  * [gpasm] Allowed special escape sequences (like hex codes) in character
  literals. Old behavior would silently return incorrect result.

2007-06-14 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed bug #897875, assertion failed instead of error for
  substitution of #define label without a value
  * [gpasm] Fixed minor bug with ignored parameter in check_defines

2007-06-12 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Patch by Michael Ballbach to add support for CONFIG directive

2007-06-12 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed minor lexer error with title and subtitle directive involving
  whitespace after parameter
  * [gpasm] Fixed errors on misuse of #define directive

2007-06-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Improved quote behavior on include, title, and subtitle directives
  and moved their logic into the parser grammar

2007-06-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Corrected behavior for include directive with quoted, braced, and
  unquoted parameter

2007-06-07 David Barnett <daviebdawg@gmail.com>
  * [gputils] Added support for sx48 and sx52
  * [gputils] Updated list of supported processors in gputils.lyx

2007-06-07 David Barnett <daviebdawg@gmail.com>
  * [gputils] Added support for p10f220 and p10f222

2007-06-07 David Barnett <daviebdawg@gmail.com>
  * [gputils] Added support for p16f610
  * [gputils] Added support for p16f882, p16f883, p16f884, p16f886, and p16f887
  * [gputils] Added support for p18f1230 and p18f1330